removed unnecessary descriptions

--- a/plugins/workflow/images/forms/action.xml
+++ b/plugins/workflow/images/forms/action.xml
@@ -8,7 +8,6 @@
 				name="images_intro_image_settings"
 				type="list"
 				label="PLG_WORKFLOW_IMAGES_INTRO_IMAGE_SETTING_LABEL"
-				description="PLG_WORKFLOW_IMAGES_INTRO_IMAGE_SETTING_DESC"
 				default="0"
 				hide_all="true"
 				>
@@ -20,12 +19,51 @@
 				name="images_full_article_image_settings"
 				type="list"
 				label="PLG_WORKFLOW_IMAGES_FULL_ARTICLE_IMAGE_SETTING_LABEL"
-				description="PLG_WORKFLOW_IMAGES_FULL_ARTICLE_IMAGE_SETTING_DESC"
 				default="0"
 				hide_all="true"
 			>
 				<option value="0">JNO</option>
 				<option value="1">JYES</option>
+			</field>
+
+			<field
+				name="introImageHeight"
+				type="number"
+				label="PLG_WORKFLOW_IMAGES_INTRO_IMAGE_HEIGHT_LABEL"
+				default=""
+				hide_all="true"
+				step="1"
+			>
+			</field>
+
+			<field
+				name="fullArticleImageHeight"
+				type="number"
+				label="PLG_WORKFLOW_IMAGES_FULL_ARTICLE_IMAGE_HEIGHT_LABEL"
+				default=""
+				hide_all="true"
+				step="1"
+			>
+			</field>
+
+			<field
+				name="introImageWidth"
+				type="number"
+				label="PLG_WORKFLOW_IMAGES_INTRO_IMAGE_WIDTH_LABEL"
+				default=""
+				hide_all="true"
+				step="1"
+			>
+			</field>
+
+			<field
+				name="fullArticleImageWidth"
+				type="number"
+				label="PLG_WORKFLOW_IMAGES_FULL_ARTICLE_IMAGE_WIDTH_LABEL"
+				default=""
+				hide_all="true"
+				step="1"
+			>
 			</field>
 
 			<field
@@ -40,49 +78,15 @@
 			</field>
 
 			<field
-				name="introImageHeight"
-				type="number"
-				label="PLG_WORKFLOW_IMAGES_HEIGHT_LABEL"
-				description="PLG_WORKFLOW_IMAGES_INTRO_IMAGE_HEIGHT_DESC"
+				name="fileExtensions"
+				type="text"
+				label="Supported Extensions"
+				description="Image extensions, which are allowed on this transition (comma seperated)"
 				default=""
 				hide_all="true"
 				step="1"
 			>
 			</field>
-
-			<field
-				name="fullArticleImageHeight"
-				type="number"
-				label="PLG_WORKFLOW_IMAGES_HEIGHT_LABEL"
-				description="PLG_WORKFLOW_IMAGES_FULL_ARTICLE_IMAGE_HEIGHT_DESC"
-				default=""
-				hide_all="true"
-				step="1"
-			>
-			</field>
-
-			<field
-				name="introImageWidth"
-				type="number"
-				label="PLG_WORKFLOW_IMAGES_WIDTH_LABEL"
-				description="PLG_WORKFLOW_IMAGES_INTRO_IMAGE_WIDTH_DESC"
-				default=""
-				hide_all="true"
-				step="1"
-			>
-			</field>
-
-			<field
-				name="fullArticleImageWidth"
-				type="number"
-				label="PLG_WORKFLOW_IMAGES_WIDTH_LABEL"
-				description="PLG_WORKFLOW_IMAGES_FULL_ARTICLE_IMAGE_WIDTH_DESC"
-				default=""
-				hide_all="true"
-				step="1"
-			>
-			</field>
-
 
 		</fieldset>
 	</fields>
