--- a/templates/cassiopeia/scss/_variables.scss
+++ b/templates/cassiopeia/scss/_variables.scss
@@ -79,7 +79,7 @@ $cassiopeia-toolbar-line-height:         1.8rem;
 // Fonts
 $font-family-base:                   "Fira Sans", Arial, sans-serif;
 $cassiopeia-inverted-text-color:     $cassiopeia-template-color;
-$font-size-root:                     14px;
+$font-size-root:                     1em;
 $h1-font-size:                       1.857rem;
 $h2-font-size:                       1.571rem;
 $h3-font-size:                       1.286rem;
