--- a/templates/cassiopeia/scss/template.scss
+++ b/templates/cassiopeia/scss/template.scss
@@ -5,8 +5,8 @@
 // Variables
 @import "variables";
 
-// Mixins
-@import "mixin";
+// Tools
+@import "tools/tools";
 
 // Bootstrap
 @import "../../../media/vendor/bootstrap/scss/variables";
