:lipstick: replace px by em

--- a/templates/cassiopeia/scss/blocks/_form.scss
+++ b/templates/cassiopeia/scss/blocks/_form.scss
@@ -5,11 +5,11 @@
   background-color: $white-offset;
 
   &.input-xlarge {
-    max-width: 350px;
+    max-width: 21.875rem;
   }
 
   &.input-xxlarge {
-    max-width: 550px;
+    max-width: 34.375rem;
   }
 
   &.input-full {
@@ -19,7 +19,7 @@
 }
 
 .spacer hr {
-  width: 380px;
+  width: 23.75rem;
 }
 
 .custom-select {
