--- a/templates/cassiopeia/scss/blocks/_demo-styling.scss
+++ b/templates/cassiopeia/scss/blocks/_demo-styling.scss
@@ -6,12 +6,12 @@ $inverted-color: rgba(255, 255, 255, .9);
   text-align: center;
 
   .demo-title {
-    font-size: 20px;
+    font-size: $h2-font-size;
     color: theme-color("primary");
   }
 
   .fa-joomla {
-    font-size: 32px;
+    font-size: $h1-font-size;
     color: theme-color("primary");
   }
 
