--- a/templates/cassiopeia/scss/blocks/_header.scss
+++ b/templates/cassiopeia/scss/blocks/_header.scss
@@ -14,7 +14,7 @@
 
   header {
     width: 100%;
-    max-width: 1155px;
+    max-width: 72.1875rem;
     padding: 0 ($cassiopeia-grid-gutter / 2);
     margin: 0 auto;
 
@@ -43,8 +43,8 @@
     }
 
     img {
-      width: 290px;
-      min-width: 290px;
+      width: 18rem;
+      min-width: 18rem;
     }
 
     a {
