--- a/administrator/components/com_users/forms/user.xml
+++ b/administrator/components/com_users/forms/user.xml
@@ -169,6 +169,15 @@
 			</field>
 
 			<field
+				name="admin_fontSize"
+				type="number"
+				min="0.1" max="8" step="0.05"
+				label="COM_USERS_USER_FIELD_BACKEND_FONTSIZE_LABEL"
+				default=""
+				showon="a11y_font:0"
+			/>
+
+			<field
 				name="language"
 				type="language"
 				label="COM_USERS_USER_FIELD_FRONTEND_LANGUAGE_LABEL"
