--- a/components/com_users/forms/registration.xml
+++ b/components/com_users/forms/registration.xml
@@ -36,21 +36,22 @@
 			name="password1"
 			type="password"
 			label="COM_USERS_PROFILE_PASSWORD1_LABEL"
-			description="COM_USERS_DESIRED_PASSWORD"
+			description="COM_USERS_PASSWORD_LENGTH"
+			required="true"
 			autocomplete="new-password"
 			class="validate-password"
 			field="password1"
-			filter="raw"
 			size="30"
 			validate="password"
-			required="true"
+			strengthmeter="true"
+			force="on"
+			filter="raw"
 		/>
 
 		<field
 			name="password2"
 			type="password"
 			label="COM_USERS_PROFILE_PASSWORD2_LABEL"
-			description="COM_USERS_PROFILE_PASSWORD2_DESC"
 			autocomplete="new-password"
 			class="validate-password"
 			field="password1"
