Correct height and position of back-to-top button

--- a/templates/cassiopeia/scss/blocks/_footer.scss
+++ b/templates/cassiopeia/scss/blocks/_footer.scss
@@ -7,6 +7,8 @@
     color: #fff;
     background: $cassiopeia-template-color;
     border-radius: 3px;
+    height: 40px;
+    align-self: flex-end;
 
     @include margin("right", 5px);
     @include margin("left", auto);
