First steps to new structure
Remove banner from header.
Change position of nav and search
Several changes on css

--- a/templates/cassiopeia/scss/_variables.scss
+++ b/templates/cassiopeia/scss/_variables.scss
@@ -35,7 +35,7 @@ $grays: (
   900: $gray-900
 );
 
-$blue:                               #006898;
+$blue:                               $cassiopeia-template-color-dark;
 $indigo:                             #6610f2;
 $purple:                             #6f42c1;
 $pink:                               #e83e8c;
