--- a/templates/cassiopeia/scss/blocks/_footer.scss
+++ b/templates/cassiopeia/scss/blocks/_footer.scss
@@ -5,6 +5,10 @@
   color: #fff;
   background: $cassiopeia-template-color;
 
+  a {
+    color: #fff;
+  }
+
   .back-top {
     align-self: flex-end;
     height: 40px;
