[4.0] Implementing display of password requirements for frontend registration

--- a/components/com_users/forms/registration.xml
+++ b/components/com_users/forms/registration.xml
@@ -36,6 +36,7 @@
 			name="password1"
 			type="password"
 			label="COM_USERS_PROFILE_PASSWORD1_LABEL"
+			description="JFIELD_PASSWORD_RULES_MINIMUM_REQUIREMENTS"
 			required="true"
 			autocomplete="new-password"
 			class="validate-password"
@@ -43,6 +44,7 @@
 			size="30"
 			validate="password"
 			strengthmeter="true"
+			rules="true"
 			force="on"
 			filter="raw"
 		/>
