--- a/plugins/workflow/fields/forms/action.xml
+++ b/plugins/workflow/fields/forms/action.xml
@@ -4,32 +4,13 @@
 		<fieldset name="fields"
 				  label="Custom Fields"
 		>
-			<!--<field
-				name="subform"
-				label=""
-				type="list"
-				default="0"
-			>
-				<option value="0">JNO</option>
-				<option value="1">JYES</option>
-			</field>
-			<field
-				name="test"
-				label=""
-				type="text"
-				default="0"
-				showon="subform:1"
-			>
-			</field>-->
-
 			<field
 				name="subform"
 				type="subform"
-				formsource="plugins/workflow/fields/forms/subform.xml"
-				label="Subform"
 				multiple = "true"
 				default="0"
 				hide_all="true"
+				layout="joomla.form.field.subform.repeatable-table"
 			>
 			</field>
 		</fieldset>
