Created an alternative layout for a banner with text overlay
### Testing instructions
Create a custom module on position "banner" and select layout "banner"
Use a big image (at least 1280px width) as background image.
As content write something as h2

--- a/templates/cassiopeia/scss/blocks/_banner.scss
+++ b/templates/cassiopeia/scss/blocks/_banner.scss
@@ -8,4 +8,24 @@
     margin: auto;
   }
 
+  .banner-overlay {
+    height: 70vh;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: top,center;
+    background-size: cover;
+
+    .overlay {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
+      color: #fff;
+      background-color: rgba(0,0,0,.5);
+
+      h2 {
+        font-size: 3rem;
+      }
+    }
+  }
 }
