--- a/templates/cassiopeia/scss/template.scss
+++ b/templates/cassiopeia/scss/template.scss
@@ -1,12 +1,8 @@
 // Bootstrap functions
 @import "../../../media/vendor/bootstrap/scss/functions";
 
-
-// Variables
-@import "variables";
-
-// Mixins
-@import "mixin";
+// Variables, Functions and Mixins
+@import "tools/tools";
 
 // Bootstrap
 @import "../../../media/vendor/bootstrap/scss/variables";
