:recycle: replace px by rem for alert

--- a/templates/cassiopeia/scss/blocks/_alerts.scss
+++ b/templates/cassiopeia/scss/blocks/_alerts.scss
@@ -2,7 +2,7 @@
 
 .j-main-container {
   .alert {
-    margin: 10px;
+    margin: .75rem;
   }
 
 }
@@ -15,7 +15,7 @@
 
   from {
     opacity: 0;
-    transform: translateY(-15px);
+    transform: translateY(-1rem);
   }
 
   to {
