--- a/templates/cassiopeia/scss/blocks/_header.scss
+++ b/templates/cassiopeia/scss/blocks/_header.scss
@@ -56,7 +56,23 @@
     }
   }
 
+  .navbar-collapse {
+    flex-direction: column;
+
+    @include media-breakpoint-up(lg) {
+      align-items: flex-start;
+      flex-direction: row;
+    }
+
+    &.show {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
+  }
+
   .mod-menu {
+    flex: 1 1 0%;
     flex-direction: column !important;
     margin-top: 20px;
 
@@ -65,54 +81,50 @@
       margin-top: 0;
 
     }
-  }
 
-  .navbar-collapse {
-    justify-content: space-between;
-  }
-
-  .mod-menu li {
-    position: relative;
-    display: inline-block;
-    margin-right: 20px;
-    letter-spacing: 1.75px;
-
-    &:last-child {
-      margin-right: 0;
-    }
-
-    &::after {
-
-      @include media-breakpoint-up(md) {
-        position: absolute;
-        right: 50%;
-        bottom: 0;
-        left: 50%;
-        display: block;
-        height: 2px;
-        margin: auto;
-        content: "";
-        background: transparent;
-        opacity: .2;
-        transition: all .2s ease, background-color .2s ease;
-      }
-    }
-
-    &.active::after,
-    &:hover::after {
-      right: 2px;
-      left: 0;
-      background: $white;
-    }
-
-    > a,
-    .nav-header,
-    .separator {
+    li {
       position: relative;
-      display: block;
-      padding: .25rem 0 0;
-      color: $white;
-      text-decoration: none;
+      display: inline-block;
+      margin-right: 20px;
+      letter-spacing: 1.75px;
+
+      &:last-child {
+        margin-right: 0;
+      }
+
+      &::after {
+
+        @include media-breakpoint-up(md) {
+          position: absolute;
+          right: 50%;
+          bottom: 0;
+          left: 50%;
+          display: block;
+          height: 2px;
+          margin: auto;
+          content: "";
+          background: transparent;
+          opacity: .2;
+          transition: all .2s ease, background-color .2s ease;
+        }
+      }
+
+      &.active::after,
+      &:hover::after {
+        right: 2px;
+        left: 0;
+        background: $white;
+      }
+
+      > a,
+      .nav-header,
+      .separator {
+        position: relative;
+        display: block;
+        padding: .25rem 0 0;
+        color: $white;
+        text-decoration: none;
+      }
     }
   }
 
@@ -127,19 +139,22 @@
   }
 
   .form-inline {
-    margin-left: 1.5rem;
+    margin-top: .75rem;
 
-    @include media-breakpoint-down(md) {
-      margin: 1rem 0;
-    }
-
-    label {
-      @include a11y-visually-hidden();
+    @include media-breakpoint-up(md) {
+      margin-top: 0;
+      margin-left: auto;
     }
   }
 
-  .form-inline:only-child {
-    margin-left: auto;
+  .mod-finder {
+    display: flex;
+    flex: 1 0 20rem;
+    max-width: 100%;
+
+    > label {
+      @include a11y-visually-hidden();
+    }
   }
 }
 
