[3.x] alphanumeric validation rule

--- a/administrator/components/com_languages/models/forms/language.xml
+++ b/administrator/components/com_languages/models/forms/language.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <form>
 	<fieldset>
-		<field 
-			name="lang_id" 
+		<field
+			name="lang_id"
 			type="text"
 			label="JGLOBAL_FIELD_ID_LABEL"
 			description="JGLOBAL_FIELD_ID_DESC"
@@ -11,8 +11,8 @@
 			readonly="true"
 		/>
 
-		<field 
-			name="lang_code" 
+		<field
+			name="lang_code"
 			type="text"
 			label="COM_LANGUAGES_FIELD_LANG_TAG_LABEL"
 			description="COM_LANGUAGES_FIELD_LANG_TAG_DESC"
@@ -21,7 +21,7 @@
 			size="10"
 		/>
 
-		<field 
+		<field
 			name="title"
 			type="text"
 			label="JGLOBAL_TITLE"
@@ -31,7 +31,7 @@
 			size="40"
 		/>
 
-		<field 
+		<field
 			name="title_native"
 			type="text"
 			label="COM_LANGUAGES_FIELD_TITLE_NATIVE_LABEL"
@@ -41,11 +41,12 @@
 			size="40"
 		/>
 
-		<field 
-			name="sef" 
+		<field
+			name="sef"
 			type="text"
 			label="COM_LANGUAGES_FIELD_LANG_CODE_LABEL"
 			description="COM_LANGUAGES_FIELD_LANG_CODE_DESC"
+			validate="alphanumeric"
 			maxlength="50"
 			required="true"
 			size="10"
@@ -66,8 +67,8 @@
 			<option value="">JNONE</option>
 		</field>
 
-		<field 
-			name="description" 
+		<field
+			name="description"
 			type="textarea"
 			label="JGLOBAL_DESCRIPTION"
 			description="COM_LANGUAGES_FIELD_DESCRIPTION_DESC"
@@ -75,8 +76,8 @@
 			rows="5"
 		/>
 
-		<field 
-			name="published" 
+		<field
+			name="published"
 			type="list"
 			label="JSTATUS"
 			description="COM_LANGUAGES_FIELD_PUBLISHED_DESC"
@@ -87,9 +88,9 @@
 			<option value="0">JUNPUBLISHED</option>
 			<option value="-2">JTRASHED</option>
 		</field>
-		
-		<field 
-			name="access" 
+
+		<field
+			name="access"
 			type="accesslevel"
 			label="JFIELD_ACCESS_LABEL"
 			description="JFIELD_ACCESS_DESC"
@@ -97,8 +98,8 @@
 		/>
 	</fieldset>
 	<fieldset name="metadata" label="JGLOBAL_FIELDSET_METADATA_OPTIONS">
-		<field 
-			name="metakey" 
+		<field
+			name="metakey"
 			type="textarea"
 			label="JFIELD_META_KEYWORDS_LABEL"
 			description="JFIELD_META_KEYWORDS_DESC"
@@ -106,8 +107,8 @@
 			cols="30"
 		/>
 
-		<field 
-			name="metadesc" 
+		<field
+			name="metadesc"
 			type="textarea"
 			label="JFIELD_META_DESCRIPTION_LABEL"
 			description="JFIELD_META_DESCRIPTION_DESC"
@@ -116,8 +117,8 @@
 		/>
 	</fieldset>
 	<fieldset name="site_name" label="COM_LANGUAGES_FIELDSET_SITE_NAME_LABEL">
-		<field 
-			name="sitename" 
+		<field
+			name="sitename"
 			type="text"
 			label="COM_LANGUAGES_FIELD_SITE_NAME_LABEL"
 			description="COM_LANGUAGES_FIELD_SITE_NAME_DESC"
