--- a/templates/cassiopeia/scss/blocks/_header.scss
+++ b/templates/cassiopeia/scss/blocks/_header.scss
@@ -116,9 +116,7 @@
         background: $white;
       }
 
-      > a,
-      .nav-header,
-      .separator {
+      > a {
         position: relative;
         display: block;
         padding: .25rem 0 0;
