--- a/templates/cassiopeia/scss/blocks/_header.scss
+++ b/templates/cassiopeia/scss/blocks/_header.scss
@@ -57,13 +57,6 @@
   }
 
   .navbar-collapse {
-    flex-direction: column;
-
-    @include media-breakpoint-up(lg) {
-      align-items: flex-start;
-      flex-direction: row;
-    }
-
     &.show {
       display: flex;
       flex-wrap: wrap;
@@ -72,56 +65,38 @@
   }
 
   .mod-menu {
-    flex: 1 1 0%;
-    flex-direction: column !important;
-    margin-top: 20px;
+    flex: 1 0 100%;
+    margin: 0;
+    padding: 0;
+    list-style: none;
 
     @include media-breakpoint-up(md) {
-      flex-direction: row !important;
-      margin-top: 0;
-
+      flex: 1 1 0%;
+      display: flex;
+      flex-direction: row;
     }
 
-    li {
+    > li {
       position: relative;
-      display: inline-block;
-      margin-right: 20px;
       letter-spacing: 1.75px;
 
-      &:last-child {
-        margin-right: 0;
-      }
-
-      &::after {
-
-        @include media-breakpoint-up(md) {
-          position: absolute;
-          right: 50%;
-          bottom: 0;
-          left: 50%;
-          display: block;
-          height: 2px;
-          margin: auto;
-          content: "";
-          background: transparent;
-          opacity: .2;
-          transition: all .2s ease, background-color .2s ease;
+      @include media-breakpoint-up(md) {
+        + li {
+          margin-left: 1.55em;
         }
       }
 
-      &.active::after,
-      &:hover::after {
-        right: 2px;
-        left: 0;
-        background: $white;
-      }
-
-      > a {
+      > a,
+      > span {
         position: relative;
-        display: block;
-        padding: .25rem 0 0;
         color: $white;
         text-decoration: none;
+      }
+    }
+
+    .parent {
+      > ul {
+        display: none;
       }
     }
   }
@@ -179,9 +154,6 @@
       margin-left: 5px;
       font-size: $h1-font-size;
       color: lighten($cassiopeia-template-color, 10%);
-
     }
-
   }
-
 }
