Saving article cause : '' is not a valid integer
Default hits value should be a valid inetger to be saved in the database.

--- a/administrator/components/com_content/forms/article.xml
+++ b/administrator/components/com_content/forms/article.xml
@@ -234,6 +234,7 @@
 			class="readonly"
 			readonly="true"
 			filter="unset"
+			default="0"
 		/>
 
 		<field
@@ -944,4 +945,3 @@
 	</fields>
 
 </form>
-
