--- a/templates/cassiopeia/scss/template.scss
+++ b/templates/cassiopeia/scss/template.scss
@@ -37,6 +37,7 @@
 @import "blocks/layout";
 @import "blocks/modals";
 @import "blocks/modifiers";
+@import "blocks/modules";
 @import "blocks/utilities";
 @import "blocks/css-grid"; // Last to allow fallback
 
