Added parameter for color switcher

--- a/templates/cassiopeia/scss/blocks/_global.scss
+++ b/templates/cassiopeia/scss/blocks/_global.scss
@@ -32,6 +32,24 @@ h6 {
   font-weight: bold;
 }
 
+a {
+  color: var(--cassiopeia-color-primary);
+}
+a:hover {
+  color: var(--cassiopeia-color-hover);
+}
+a.navbar-brand {
+  color: var(--cassiopeia-color-brand);
+}
+
+.btn-primary {
+  background-color: var(--cassiopeia-color-primary);
+  border-color: var(--cassiopeia-color-primary);
+  &:hover {
+    background-color: var(--cassiopeia-color-hover);
+    border-color: var(--cassiopeia-color-hover);
+  }
+}
 small,
 .small {
   font-size: $font-size-sm;
