--- a/templates/cassiopeia/scss/global/fonts_local_roboto.scss
+++ b/templates/cassiopeia/scss/global/fonts_local_roboto.scss
@@ -1,5 +1,5 @@
 // Fonts
-@import "../../../media/vendor/roboto-fontface/scss/roboto/sass/roboto-fontface";
+@import "../../../media/vendor/roboto-fontface/scss/roboto/roboto-fontface.css";
 
 * {
   font-family: 'Roboto', sans-serif;
