--- a/templates/cassiopeia/scss/blocks/_global.scss
+++ b/templates/cassiopeia/scss/blocks/_global.scss
@@ -9,7 +9,7 @@
 }
 
 html {
-  font-family: --cassiopeia-font-family-root;
+  font-family: var(--cassiopeia-font-family-root);
   font-size: $font-size-root;
 }
 
@@ -30,8 +30,8 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: --cassiopeia-font-family-headings;
-  font-weight: --cassiopeia-font-weight-headings;
+  font-family: var(--cassiopeia-font-family-headings);
+  font-weight: var(--cassiopeia-font-weight-headings);
 }
 
 small,
