Fix poppins font weight for headings

--- a/templates/cassiopeia/scss/global/fonts-web_poppins+roboto.scss
+++ b/templates/cassiopeia/scss/global/fonts-web_poppins+roboto.scss
@@ -4,5 +4,5 @@
 :root {
   --cassiopeia-font-family-root: "Roboto", sans-serif;
   --cassiopeia-font-family-headings: "Poppins", sans-serif;
-  --cassiopeia-font-weight-headings: bold;
+  --cassiopeia-font-weight-headings: normal;
 }
