--- a/templates/cassiopeia/scss/blocks/_demo-styling.scss
+++ b/templates/cassiopeia/scss/blocks/_demo-styling.scss
@@ -1,6 +1,6 @@
 // Demo Styling
 
-$inverted-color: rgba(255, 255, 255, .9);
+$inverted-color: hsla(0, 0%, 100%, .9);
 
 .demo-module {
   text-align: center;
