--- a/templates/cassiopeia/scss/blocks/_form.scss
+++ b/templates/cassiopeia/scss/blocks/_form.scss
@@ -2,7 +2,7 @@
 
 .form-control {
   max-width: $input-max-width;
-  background-color: $white-offset;
+  background-color: $white;
 
   &.input-xlarge {
     max-width: 21.875rem;
