--- a/templates/cassiopeia/scss/global/colors_spring.scss
+++ b/templates/cassiopeia/scss/global/colors_spring.scss
@@ -1,5 +1,5 @@
 :root {
-  --cassiopeia-color-primary: #426b00;
-  --cassiopeia-color-hover: #dbd30f;
-  --cassiopeia-color-brand: #6c6900;
+  --cassiopeia-color-primary: hsl(83, 100%, 21%);
+  --cassiopeia-color-hover: hsl(58, 87%, 46%);
+  --cassiopeia-color-brand: hsl(58, 100%, 21%);
 }
