--- a/templates/cassiopeia/scss/global/colors_summer.scss
+++ b/templates/cassiopeia/scss/global/colors_summer.scss
@@ -1,5 +1,5 @@
 :root {
-  --cassiopeia-color-primary: #e89b41;
-  --cassiopeia-color-hover: #f57122;
-  --cassiopeia-color-brand: #ff5624;
+  --cassiopeia-color-primary: hsl(32, 78%, 58%);
+  --cassiopeia-color-hover: hsl(22, 91%, 55%);
+  --cassiopeia-color-brand: hsl(14, 100%, 57%);
 }
