--- a/templates/cassiopeia/scss/global/colors_winter.scss
+++ b/templates/cassiopeia/scss/global/colors_winter.scss
@@ -1,5 +1,5 @@
 :root {
-  --cassiopeia-color-primary: #a6a6a6;
-  --cassiopeia-color-hover: #d9d9d9;
-  --cassiopeia-color-brand: #1d1d1d;
+  --cassiopeia-color-primary: hsl(0, 0%, 65%);
+  --cassiopeia-color-hover: hsl(0, 0%, 85%);
+  --cassiopeia-color-brand: hsl(0, 0%, 11%);
 }
