--- a/templates/cassiopeia/scss/blocks/_layout.scss
+++ b/templates/cassiopeia/scss/blocks/_layout.scss
@@ -10,7 +10,7 @@
 }
 
 .container-header header .site {
-  background-color: #fafafa;
+  background-color: $gray-100;
 
   > .full-width {
     max-width: none;
