--- a/templates/cassiopeia/scss/global/colors_autumn.scss
+++ b/templates/cassiopeia/scss/global/colors_autumn.scss
@@ -1,5 +1,5 @@
 :root {
-  --cassiopeia-color-primary: #2e7099;
-  --cassiopeia-color-hover: #45a8e6;
-  --cassiopeia-color-brand: #2e4e6d;
+  --cassiopeia-color-primary: hsl(203, 54%, 39%);
+  --cassiopeia-color-hover: hsl(203, 76%, 59%);
+  --cassiopeia-color-brand: hsl(210, 41%, 30%);
 }
