--- a/templates/cassiopeia/scss/blocks/_form.scss
+++ b/templates/cassiopeia/scss/blocks/_form.scss
@@ -78,7 +78,7 @@ td .form-control {
   background: $white-offset;
   border: 1px solid $gray-600;
   border-radius: $border-radius;
-  box-shadow: 0 0 .5rem rgba(0,0,0,.8);
+  box-shadow: 0 0 .5rem rgba(0, 0, 0, .8);
 
   &[id^=editarticle-] {
     margin-inline-start: -10em;
