[4.0] Modify display and tip for Edit Contact in Frontend

--- a/templates/cassiopeia/scss/blocks/_form.scss
+++ b/templates/cassiopeia/scss/blocks/_form.scss
@@ -84,6 +84,10 @@ td .form-control {
     margin-inline-start: -10em;
   }
 
+  &[id^=editcontact-] {
+    margin-inline-start: -10em;
+  }
+
   [dir=ltr] & {
     text-align: left;
   }
