--- a/templates/cassiopeia/scss/blocks/_form.scss
+++ b/templates/cassiopeia/scss/blocks/_form.scss
@@ -75,7 +75,7 @@ td .form-control {
   padding: .5em;
   margin: .5em;
   color: $black;
-  background: $white-offset;
+  background: $white;
   border: 1px solid $gray-600;
   border-radius: $border-radius;
   box-shadow: 0 0 .5rem rgba(0, 0, 0, .8);
