Back to the roots
Remove 4 seasons themes. Add standard and alternative color theme (provisional). Remove Poppins, add Fira. Small improvements from design2 branch.

--- a/templates/cassiopeia/scss/blocks/_banner.scss
+++ b/templates/cassiopeia/scss/blocks/_banner.scss
@@ -21,11 +21,11 @@
       align-items: center;
       justify-content: center;
       height: 100%;
-      color: $white;
-      background-color: hsla(0, 0%, 0%, .5);
+      padding: $cassiopeia-grid-gutter;
+      text-align: center;
 
-      h2 {
-        font-size: 3rem;
+      .text-thin {
+        font-weight: $font-weight-lighter;
       }
     }
   }
