--- a/templates/cassiopeia/scss/blocks/_css-grid.scss
+++ b/templates/cassiopeia/scss/blocks/_css-grid.scss
@@ -19,7 +19,7 @@
 
     > [class^="container-"],
     > [class*=" container-"] {
-      width: auto;
+      width: 100%;
       max-width: none;
     }
 
@@ -60,6 +60,9 @@
 
     &.wrapper-fluid {
       grid-template-columns: [full-start] minmax(0, 1fr) [main-start] repeat(4, minmax(0, 25%)) [main-end] minmax(0, 1fr) [full-end];
+      .grid-child {
+        max-width: none;
+      }
     }
   }
 }
@@ -94,6 +97,9 @@
 
 .container-sidebar-right {
   grid-area: side-r;
+  .sidebar-right:first-child {
+    margin-top: $cassiopeia-grid-gutter;
+  }
 }
 
 .container-main-top {
