--- a/templates/cassiopeia/scss/global/fonts-web_roboto+noto-sans.scss
+++ b/templates/cassiopeia/scss/global/fonts-web_roboto+noto-sans.scss
@@ -1,5 +1,5 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;300;400;700&family=Roboto:wght@100;300;400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;300;400;700&family=Roboto:wght@100;300;400;700&display=swap");
 
 :root {
   --cassiopeia-font-family-body: "Noto Sans", sans-serif;
