--- a/templates/cassiopeia/scss/blocks/_banner.scss
+++ b/templates/cassiopeia/scss/blocks/_banner.scss
@@ -23,9 +23,18 @@
       height: 100%;
       padding: $cassiopeia-grid-gutter;
       text-align: center;
+      background-color: hsla(0, 0%, 0%, .5);
 
       .text-thin {
         font-weight: $font-weight-lighter;
+        &::after {
+          display: block;
+          width: 30%;
+          height: 6px;
+          margin: 1rem auto 2rem;
+          content: "";
+          background: var(--cassiopeia-color-hover);
+        }
       }
     }
   }
