New chrome noCard, shadow for cards, padding for positions

--- a/templates/cassiopeia/scss/blocks/_layout.scss
+++ b/templates/cassiopeia/scss/blocks/_layout.scss
@@ -31,6 +31,7 @@
 .container-top-b,
 .container-bottom-a,
 .container-bottom-b {
+  padding: 4rem 0;
   > * {
     flex: 1;
     margin: ($cassiopeia-grid-gutter / 2);
