Remove leading zero

--- a/templates/cassiopeia/scss/blocks/_modifiers.scss
+++ b/templates/cassiopeia/scss/blocks/_modifiers.scss
@@ -255,7 +255,7 @@
 // Modules
 
 .breadcrumb {
-  background-color: hsla(0, 0%, 0%, 0.03);
+  background-color: hsla(0, 0%, 0%, .03);
 }
 
 .no-card {
